# youtube-query-email

./: .gitignore  README.md  config.py  email_sender.py  emails.py  main.py  pyproject.toml  renovate.json  requirements.txt  transcription.py  youtube_api.py
.github/workflows/: email.yml
