[project]
name = "youtube-query-email"
version = "1.0.0"
requires-python = ">=3.14"
dependencies = [
    "google-api-python-client==2.196.0",
    "python-dotenv==1.2.2",
    "pytz==2026.2",
    "ruff==0.15.12",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]

[tool.ruff]
line-length = 120
indent-width = 4

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
